unpackaged/main/default/objects/Operating_Plan_Territory__c/Operating_Plan_Territory__c.object-meta.xml
<CustomObject>
    <label>Operating Plan Territory</label>
    <nameField>
        <label>Operating Plan Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Plan Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>