unpackaged/main/default/objects/Operating_Plan_Territory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operating Plan Territories</relationshipLabel>
    <relationshipName>Operating_Plan_Territories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>