unpackaged/main/default/objects/Operating_Plan_Territory__c/fields/ARR_Committed__c.field-meta.xml
<CustomField>
    <fullName>ARR_Committed__c</fullName>
    <label>ARR (Committed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>