unpackaged/main/default/objects/Operating_Plan_Territory__c/fields/End_Month__c.field-meta.xml
<CustomField>
    <fullName>End_Month__c</fullName>
    <formula>DATE(YEAR(End_Date__c),MONTH(End_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Month</label>
    <type>Date</type>
</CustomField>