unpackaged/main/default/objects/Operating_Plan_Territory__c/fields/End_Year__c.field-meta.xml
<CustomField>
    <fullName>End_Year__c</fullName>
    <formula>TEXT(YEAR(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Year</label>
    <type>Text</type>
</CustomField>