unpackaged/main/default/objects/Operating_Plan_Territory__c/fields/Planning_Period__c.field-meta.xml
<CustomField>
    <fullName>Planning_Period__c</fullName>
    <label>Planning Period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>