unpackaged/main/default/objects/Operating_Plan_Territory__c/fields/Prior_Territory__c.field-meta.xml
<CustomField>
    <fullName>Prior_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Territory</label>
    <referenceTo>Operating_Plan_Territory__c</referenceTo>
    <relationshipLabel>Operating Plan Territories</relationshipLabel>
    <relationshipName>Operating_Plan_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>