unpackaged/main/default/objects/Operating_Plan_Territory__c/fields/Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Year__c</fullName>
    <formula>TEXT(YEAR(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Year</label>
    <type>Text</type>
</CustomField>